# Lunar-Lander-DQN

./: .gitignore  LICENSE.md  README.md  play.py  pyproject.toml  run_experiments.sh  train.py
docs/: presentation.md  presentation_full.md
docs/assets/: rl-diagram
models/ll-cap_500000_sr_1/logs/: events.out.tfevents.1675364540.charlemgn.91067.0
models/ll-cap_500000_sr_1/models/: ll-ep0.ckpt  ll-ep10.ckpt  ll-ep15.ckpt  ll-ep20.ckpt  ll-ep25.ckpt  ll-ep30.ckpt  ll-ep35.ckpt  ll-ep40.ckpt  ll-ep45.ckpt  ll-ep5.ckpt  ll-ep50.ckpt
models/ll-cap_500000_sr_10/logs/: events.out.tfevents.1675357190.charlemgn.84962.0
models/ll-cap_500000_sr_10/models/: ll-ep0.ckpt  ll-ep10.ckpt  ll-ep15.ckpt  ll-ep20.ckpt  ll-ep25.ckpt  ll-ep30.ckpt  ll-ep35.ckpt  ll-ep40.ckpt  ll-ep45.ckpt  ll-ep5.ckpt  ll-ep50.ckpt
models/ll-cap_500000_sr_100/logs/: events.out.tfevents.1675366733.charlemgn.92153.0
models/ll-cap_500000_sr_100/models/: ll-ep0.ckpt  ll-ep10.ckpt  ll-ep15.ckpt  ll-ep20.ckpt  ll-ep25.ckpt  ll-ep30.ckpt  ll-ep35.ckpt  ll-ep40.ckpt  ll-ep45.ckpt  ll-ep5.ckpt  ll-ep50.ckpt
models/ll-cap_50000_sr_10/logs/: events.out.tfevents.1675360940.charlemgn.88863.0
models/ll-cap_50000_sr_10/models/: ll-ep0.ckpt  ll-ep10.ckpt  ll-ep15.ckpt  ll-ep20.ckpt  ll-ep25.ckpt  ll-ep30.ckpt  ll-ep35.ckpt  ll-ep40.ckpt  ll-ep45.ckpt  ll-ep5.ckpt  ll-ep50.ckpt
models/ll-cap_5000_sr_10/logs/: events.out.tfevents.1675363065.charlemgn.90120.0
models/ll-cap_5000_sr_10/models/: ll-ep0.ckpt  ll-ep10.ckpt  ll-ep15.ckpt  ll-ep20.ckpt  (+7 more)
src/aicourse/: agent.py  dataset.py  dqn.py  train.py
